[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/button_normal.png" type="Texture" id=2]
[ext_resource path="res://assets/button_pressed.png" type="Texture" id=3]
[ext_resource path="res://InputUI.gd" type="Script" id=4]

[node name="InputUI" type="Node2D"]
position = Vector2( -4.30763, 0.561867 )
script = ExtResource( 4 )

[node name="up_button" type="TouchScreenButton" parent="."]
position = Vector2( -68.5238, -48.2439 )
scale = Vector2( 0.314548, 0.295374 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )

[node name="down_button" type="TouchScreenButton" parent="."]
position = Vector2( -68.1275, 12.0756 )
scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )

[node name="left_button" type="TouchScreenButton" parent="."]
position = Vector2( -99.2032, -18.7249 )
scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )

[node name="right_button" type="TouchScreenButton" parent="."]
position = Vector2( -36.3822, -18.167 )
scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )

[node name="action_button" type="TouchScreenButton" parent="."]
position = Vector2( 43.9127, -31.8578 )
scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )

[node name="phone_button" type="TouchScreenButton" parent="."]
position = Vector2( 86.6144, 8.78382 )
scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )

[connection signal="pressed" from="up_button" to="." method="_on_up_button_pressed"]
[connection signal="released" from="up_button" to="." method="_on_up_button_released"]
[connection signal="pressed" from="down_button" to="." method="_on_down_button_pressed"]
[connection signal="released" from="down_button" to="." method="_on_down_button_released"]
[connection signal="pressed" from="left_button" to="." method="_on_left_button_pressed"]
[connection signal="released" from="left_button" to="." method="_on_left_button_released"]
[connection signal="pressed" from="right_button" to="." method="_on_right_button_pressed"]
[connection signal="released" from="right_button" to="." method="_on_right_button_released"]
[connection signal="pressed" from="action_button" to="." method="_on_action_button_pressed"]
[connection signal="released" from="action_button" to="." method="_on_action_button_released"]
[connection signal="pressed" from="phone_button" to="." method="_on_phone_button_pressed"]
[connection signal="released" from="phone_button" to="." method="_on_phone_button_released"]
